WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145239
Fix macros for wireless playback
https://bugs.webkit.org/show_bug.cgi?id=145239
Summary
Fix macros for wireless playback
Jon Lee
Reported
2015-05-20 18:34:38 PDT
Update support for wireless playback
rdar://problem/21049541
Attachments
Patch
(13.41 KB, patch)
2015-05-26 17:36 PDT
,
Jon Lee
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2015-05-26 17:36:42 PDT
Created
attachment 253764
[details]
Patch
Anders Carlsson
Comment 2
2015-05-26 17:46:38 PDT
Comment on
attachment 253764
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=253764&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:350 > + return _allowsAirPlayForMediaPlayback; > +} > + > +- (void)setMediaPlaybackAllowsAirPlay:(BOOL)allowed > +{ > + _allowsAirPlayForMediaPlayback = allowed; > +} > + > +- (BOOL)mediaPlaybackRequiresUserAction > +{ > + return _requiresUserActionForMediaPlayback; > +} > + > +- (void)setMediaPlaybackRequiresUserAction:(BOOL)required > +{ > + _requiresUserActionForMediaPlayback = required;
I think this should just call into the API methods instead of dealing with ivars directly.
Jon Lee
Comment 3
2015-05-26 18:21:35 PDT
Comment on
attachment 253764
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=253764&action=review
>> Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:350 >> + _requiresUserActionForMediaPlayback = required; > > I think this should just call into the API methods instead of dealing with ivars directly.
Ok, I will make that adjustment when I check in the patch.
Jon Lee
Comment 4
2015-05-28 00:27:30 PDT
Committed
r184946
: <
http://trac.webkit.org/changeset/184946
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug