Source/WebKit/mac/WebView/WebPreferences.h
@@ -267,4 +267,9 @@ extern NSString *WebPreferencesChangedNotification;
 */
 @property (nonatomic) BOOL suppressesIncrementalRendering;
 
+/*!
+    @property allowsAirPlayForMediaPlayback
+ */
+@property (nonatomic) BOOL allowsAirPlayForMediaPlayback;
+
 @end
